agregando fuentes y no salio

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,3 +55,9 @@ header > video {
     height: 100%;
   }
 }
+
+header h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+}
