--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,5 +59,19 @@ header > video {
 header h1 {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 3em;
+}
+
+header a,
+p {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+}
+
+nav a,
+li {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
 }
